fix alignment in blog

--- a/css/blog.css
+++ b/css/blog.css
@@ -9,6 +9,12 @@
   .posts {
     grid-template-columns: 1fr 1fr;
   }
+  .card-text {
+  min-height: 110px;
+  }
+  .card-title {
+    min-height: 110px;
+  }
 }
 
 .card {
